--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     
     <footer class="footer">
         <div class="container">
-            <p class="text-muted">Powered by the Yelp Fusion API</p>
+            <p class="text-muted">Powered by the <a href="https://www.yelp.com/developers">Yelp Fusion API</a></p>
             <p class="text-muted move-right">Source code on <a href="https://github.com/saracarlile/nightlife-app">GitHub</a></p>
         </div>
     </footer>
